2002-07-12  David N. Welton  <davidw@dedasys.com>

	* src/buildscripts/aardvark.tcl (aardvark::runbuildcommand):
	Updated functionality to hopefully better handle errors, warnings,
	and output.

	* src/make.tcl: Created a 'dist' target which rolls a tarball.

2002-07-11  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c (TclWeb_GetHeaderVars): New function to get
	client headers, which are now seperate from environmental
	variables.

2002-06-18  David N. Welton  <davidw@dedasys.com>

	* cvsversion.tcl: Added tool to manage version numbers based on
	CVS changes.

2002-06-17  David N. Welton  <davidw@dedasys.com>

	* src/make.tcl: Updated build scripts to build the HTML
	documentation from XML files.

	* src/buildscripts/aardvark.tcl: Changed commands to 'sh' for
	shell commands and 'tcl' for Tcl commands.

2002-06-10  David N. Welton  <davidw@dedasys.com>

	* doc/packages/dio/dio.xml: Further updates.

2002-06-08  David N. Welton  <davidw@dedasys.com>

	* doc/packages/dio/dio.xml: Finished up adding material to
	dio.xml.

2002-06-06  David N. Welton  <davidw@dedasys.com>

	* doc/packages/dio/dio.xml: Initial commit of (incomplete) docbook
	documentation.

	* doc/packages/dio/rivet.xsl: Added XSL file for docbook
	documentation.

2002-05-03  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c (TclWeb_GetVarAsList): Added check to length
	to make sure we fully compare the two variables.  Idem for
	TclWeb_VarExists.

2002-04-19  Damon J. Courtney <damon@unreality.com>
	* src/TclWebapache.c
	    Added 'TclWeb_GetVirtualFile' command which returns the full
	    path to a virtual file.

	* src/rivetCore.c
	    Added command 'virtual_filename' to return the full path to a
	    virtual file.

	    Added -virtual option to include and parse commands to enable
	    them to parse a virtual file which is relative to the webserver.

2002-03-26  Damon J. Courtney <damon@unreality.com>

	* rivet/packages/form