@@ -28,6 +28,8 @@ TODO
 
 * Need to add a local.tcl for local procs and setup.
 
+* Documentation in XML.
+
 MAYBE
 =====
 
